# Koreader_Highlights_2_Anki

./: README.md  install.sh  pyproject.toml
.github/workflows/: build.yml  release.yml
koreader_highlights_2_anki/: __main__.py
test_koreader_highlights_2_anki/: test_main.py
test_koreader_highlights_2_anki/resources/Ali Abdaal - Feel-Good Productivity_ How to Do More of What Matters to You.sdr/: metadata.epub.lua
test_koreader_highlights_2_anki/resources/Wallace J. Nichols - Blue Mind_ How Water Makes You Happier_ More Connected and Better at What You Do.sdr/: metadata.epub.lua
test_koreader_highlights_2_anki/ressources/Thinking, Fast and Slow - Daniel Kahneman.sdr/: metadata.epub.lua
