[tool.poetry]
name = "koreader_highlights_2_anki"
version = "0.1.2"
description = "A script to create Anki flashcards from KOReader metadata highlights."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
genanki = ">=0.13.1"
inquirer = "^3.1.1"
nltk = "^3.8.1"
torch = "^2.0.0"
tqdm = "^4.65.0"
transformers = "^4.45.0"
lupa = "^2.0.1"

[tool.poetry.scripts]
koreader_highlights_2_anki = "koreader_highlights_2_anki.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
ipdb = "^0.13"
ipython = "^7.5.3"
coverage = "^7.5.3"
pre-commit = "^3.7.1"
poetry-pre-commit-plugin = "^0.1.2"

[tool.pre_commit]
version = "2.3.0"
config = ".pre-commit-config.yaml"
